--- a/gb/20/8/27/n12361895.md
+++ b/gb/20/8/27/n12361895.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vtfrag334/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/vtfrag334/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/vtfrag334/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vtfrag334/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vtfrag334/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vtfrag334/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vtfrag334/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vtfrag334/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>全美首家 亚马逊推出智能结账Fresh超市</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-696702292-600x400.jpg" />
 <h6>图为亚马逊位于西雅图的Amazon Fresh Pickup地点。（David Ryder/Getty Images）
 </h6>
 <hr>
-	<p>【大纪元2020年08月27日讯】（大纪元记者谢佳宣编译报导）中共病毒（武汉肺炎）爆发迄今冲击美国零售业，不少品牌缩减规模或申请破产，但靠着在经济逆势突围的<ahref="https://github.com/vtfrag334/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>周四（27日）宣布，在加州<ahref="https://github.com/vtfrag334/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>，首家新鲜食品超市Amazon Fresh，今年就会正式开幕。</p>
-<p>据今日美国报导，<ahref="https://github.com/vtfrag334/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>目前在美国有3间Amazon Fresh，仅提供线上购物，但这家位于<ahref="https://github.com/vtfrag334/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>伍德兰山庄（Woodland Hills）的新店将开放消费者入内选购商品，并使用<ahref="https://github.com/vtfrag334/djy/blob/master/gb/tag/%E6%99%BA%E8%83%BD%E8%B4%AD%E7%89%A9%E8%BD%A6.md#1">智能购物车</a>Dash Cart结账，让顾客不用再排队买单。</p>
-<p>但如果想使用<ahref="https://github.com/vtfrag334/djy/blob/master/gb/tag/%E6%99%BA%E8%83%BD%E8%B4%AD%E7%89%A9%E8%BD%A6.md#1">智能购物车</a>，必须全程打开亚马逊的应用程序并用刷卡付款。当民众把商品放进Dash Cart时，购物车会自动追踪该项商品，对放进、移出购物车内的商品计算价格；当推着车从Dash Cart专用通道离店后，绑定的信用卡会被自动扣款，并将收据寄到购物人的电子信箱中。</p>
+	<p>【大纪元2020年08月27日讯】（大纪元记者谢佳宣编译报导）中共病毒（武汉肺炎）爆发迄今冲击美国零售业，不少品牌缩减规模或申请破产，但靠着在经济逆势突围的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>周四（27日）宣布，在加州<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>，首家新鲜食品超市Amazon Fresh，今年就会正式开幕。</p>
+<p>据今日美国报导，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%BA%9A%E9%A9%AC%E9%80%8A.md#1">亚马逊</a>目前在美国有3间Amazon Fresh，仅提供线上购物，但这家位于<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%B4%9B%E6%9D%89%E7%9F%B6.md#1">洛杉矶</a>伍德兰山庄（Woodland Hills）的新店将开放消费者入内选购商品，并使用<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%99%BA%E8%83%BD%E8%B4%AD%E7%89%A9%E8%BD%A6.md#1">智能购物车</a>Dash Cart结账，让顾客不用再排队买单。</p>
+<p>但如果想使用<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%99%BA%E8%83%BD%E8%B4%AD%E7%89%A9%E8%BD%A6.md#1">智能购物车</a>，必须全程打开亚马逊的应用程序并用刷卡付款。当民众把商品放进Dash Cart时，购物车会自动追踪该项商品，对放进、移出购物车内的商品计算价格；当推着车从Dash Cart专用通道离店后，绑定的信用卡会被自动扣款，并将收据寄到购物人的电子信箱中。</p>
 <p>此外，全店内还装有亚马逊语音助理Alexa，可以协助解决购物者的问题。Fresh店还将兼做亚马逊的退货和取货服务。</p>
 <p>亚马逊生鲜店副总裁杰夫·海林（Jeff Helbling）表示，使用Dash Cart的顾客必须自行装袋，并且不使用超过2个袋子，购物量超过2个纸袋的购物者须改用一般结账。</p>
 <p>这家智能超市占地3.5万平方英尺，开在伍德兰山庄的一家露天商场内，旁边是一家See&#8217;s Candy。地址是6245 Topanga Canyon Blvd。</p>
@@ -19,42 +19,40 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/14/n12332005.md#1">7月网购势头不减 亚马逊近2/3包裹自己送</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/15/n12332261.md#1">亚马逊或签下倒闭商场作分拣中心</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/16/n12335302.md#1">加州法院：亚马逊须为其网上劣质商品负责</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/18/n12340758.md#1">亚马逊扩大美6城市办公室 招数千名白领</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/14/n12332005.md#1">7月网购势头不减 亚马逊近2/3包裹自己送</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/15/n12332261.md#1">亚马逊或签下倒闭商场作分拣中心</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/16/n12335302.md#1">加州法院：亚马逊须为其网上劣质商品负责</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/8/18/n12340758.md#1">亚马逊扩大美6城市办公室 招数千名白领</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/vtfrag334/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11480776.md#1" target="_blank">印度中部城市学校师生学炼法轮功</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10006546.md#1" target="_blank">坚持共产体制推改革 波共前书记被轰下台</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787603.md#1" target="_blank">钟延：从610副主任难逃610魔咒说起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/6/29/n12218273.md#1">违背原著的宝玉出家</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12353478.md#1">以色列培育红母牛 为《圣经》末日预言准备</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12353266.md#1">疫情中返台居家隔离日记（上）</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12353033.md#1">日本神秘湖泊“龙之眼” 演绎龙的传说</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/21/n12347600.md#1">七夕有哪些古风情？考古发现源流久远</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/27/n12361984.md#1">【有冇搞错】颠倒黑白 港共最大的恐惧是什么？</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/26/n12358896.md#1">【重播】共和党大会第三日演讲：英雄之地</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/26/n12357531.md#1">【十字路口】破解中共侵略套路 贪腐加重洪水灾情</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12354614.md#1">新疆过激防疫手段曝光 民众崩溃群吼视频流出</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/25/n12356542.md#1">中共喉舌三万字批判蓬佩奥 反被嘲讽</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/25/n12356886.md#1">回应习近平讲话 美防长：美军已准备好</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/25/n12357141.md#1">65岁张国立被搀扶拍戏 传遭吸毒家暴儿害惨</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12354392.md#1">范冰冰遭吴秀波起诉 疑涉李晨执导影片分账</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/25/n12356940.md#1">逃税风波过去两年 范冰冰获首个全球代言</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12354738.md#1">连续上四档综艺节目 周迅被形容“走下云端”</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/26/n12359533.md#1">新剧造型曝光获称小章子怡 童瑶高情商回应</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12354004.md#1">失智症能潜伏几十年？出现8个征兆要当心</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12354783.md#1">中医推荐“养脾胃三宝”摆脱疲劳、胃病又降压</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/24/n12353985.md#1">报复？36斤鲭鱼跃出水面 撞死澳洲钓鱼男</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/19/n12343660.md#1">【罗厨寻味】鱼肉酿秋葵</a></li>
-<li><a href="https://github.com/vtfrag334/djy/blob/master/gb/20/8/25/n12356691.md#1">膝关节疼痛不敢动？单脚摆10下甩掉膝盖痛</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752388.md#1">【财商天下】美欧看上 台湾会脱孤？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vtfrag334/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vtfrag334/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/27/n12361895.htm">全美首家 亚马逊推出智能结账Fresh超市</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/27/n12361895.htm">全美首家 亚马逊推出智能结账Fresh超市</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/vtfrag334/djy/blob/master/gb/20/8/27/n12361895.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vtfrag334/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vtfrag334/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vtfrag334/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vtfrag334/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vtfrag334/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/20/8/27/n12361895.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
